New Room screen done

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -56,6 +56,12 @@
   > img {
       align-self: center; // pra nao deixar a imagem esticada
     }
+    
+    h2 {
+      font-size: 24px;
+      margin: 64px 0 24px;
+      font-family: 'Poppins', sans-serif;
+    }
 
     form {
       input {
